gitops/platform/kyverno/base/policies/no-latest-images.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: no-latest-images
spec:
  validationFailureAction: Enforce
  background: true
  rules:
    - name: disallow-latest-tag
      match:
        any:
          - resources:
              kinds:
                - Pod
      validate:
        message: Using a mutable image tag e.g. 'latest' is not allowed.
        pattern:
          spec:
            containers:
              - image: "!*:latest"
